prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/delete_base.diag.txt
ERROR: can't delete 'base'
testData/diagnostics/delete_base.nut:2:0

#allow-delete-operator
delete base
^----------


